update the stylesheet for fixing the scrollbar bug

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ nav{
           transform: scale(1);
       }
       to{
-          transform: scale(1.2);
+          transform: scale(1.1);
       }
       
   }
